--- a/WindowsService1/App.config
+++ b/WindowsService1/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+  
+  <startup> 
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+
+  <log4net>
+    <appender name="Console" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.SimpleLayout"/>
+    </appender>
+
+    <appender name="File" type="log4net.Appender.FileAppender">
+      <file value="log.txt"/>
+      <layout type="log4net.Layout.SimpleLayout"/>
+    </appender>
+
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="File"/>
+    </root>
+  </log4net>
+  
 </configuration>
