--- a/WindowsService1/App.config
+++ b/WindowsService1/App.config
@@ -18,6 +18,18 @@
       <layout type="log4net.Layout.SimpleLayout"/>
     </appender>
 
+    <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender" >
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %-5level %logger - %message - %location%newline" />
+      </layout>
+      <securitycontext type="log4net.Util.WindowsSecurityContext">
+        <credentials value="Process">
+        </credentials>
+      </securitycontext>
+
+      <applicationName value="MyCustomSource" />
+    </appender>
+
     <root>
       <level value="ALL"/>
       <appender-ref ref="File"/>
