--- a/WindowsService1/App.config
+++ b/WindowsService1/App.config
@@ -16,23 +16,23 @@
     <appender name="File" type="log4net.Appender.FileAppender">
       <file value="log.txt"/>
       <layout type="log4net.Layout.SimpleLayout"/>
-    </appender>
+    </appender>    
 
-    <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender" >
+    <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender">      
+      <param name="LogName" value="Test Service" />
+      <param name="ApplicationName" value="Windows Service" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %-5level %logger - %message - %location%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
       </layout>
       <securitycontext type="log4net.Util.WindowsSecurityContext">
         <credentials value="Process">
         </credentials>
       </securitycontext>
-
-      <applicationName value="MyCustomSource" />
     </appender>
 
     <root>
       <level value="ALL"/>
-      <appender-ref ref="File"/>
+      <appender-ref ref="EventLogAppender"/>
     </root>
   </log4net>
   
